mengganti image dan merubah deskripsi

--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@
                     BEDJO JASA TEKNIK
                   </h4>
                   <h1 class="display-2 text-white mb-4">
-                    Spsesialis Cuci Toren dan Ac
+                    Bedjo Jasa Teknik Solusi Anda Untuk Mengatasi Masalah Air
+                    dan Listrik Rumah atau Kantor
                   </h1>
                   <div
                     class="d-flex justify-content-center justify-content-md-start flex-shrink-0 mb-4"
@@ -220,7 +221,8 @@
                     BEDJO JASA TEKNIK
                   </h4>
                   <h1 class="display-2 text-white mb-4">
-                    Percayakan Perawatan Toren Dan AC Anda Kepada Kami
+                    Bedjo Jasa Teknik Ditangani oleh tenaga kerja berpengalaman
+                    dan bergaransi. Area layanan JABODETABEK
                   </h1>
                   <div
                     class="d-flex justify-content-center justify-content-md-start flex-shrink-0 mb-4"
@@ -247,7 +249,7 @@
           <div class="col-lg-7 wow fadeInLeft" data-wow-delay="0.2s">
             <div class="h-100">
               <h4 class="text-primary">Tentang Kami</h4>
-              <h1 class="display-4 mb-4">Spesialis Perawatan Toren Dan AC</h1>
+              <h1 class="display-4 mb-4"></h1>
               <p class="mb-4">
                 BEDJO JASA TEKNIK berlokasi di Jakarta. Area layanan JABODETABEK
                 menangani pekerjaan:
@@ -285,14 +287,14 @@
                 </p>
               </div>
               <a class="btn btn-primary py-3 px-4 px-md-5 ms-2" href="#"
-                >Mulai Rp 70.000</a
+                >Mulai Rp 100.000</a
               >
             </div>
           </div>
           <div class="col-lg-5 wow fadeInRight" data-wow-delay="0.2s">
             <div class="position-relative h-100">
               <img
-                src="img/3.jpeg"
+                src="img/3.jpg"
                 class="img-fluid w-100 h-100"
                 style="object-fit: cover"
                 alt=""
@@ -331,8 +333,10 @@
             <div class="">
               <h4 class="text-white">Mengapa Memilih Kami ?</h4>
               <h1 class="display-4 text-white mb-0">
-                Kami berpengalaman dalam menangani perawatan toren dan berbagai
-                kerusakan ac untuk perumahan, perkantoran, PT, ruko dll.
+                Kami berpengalaman, telah banyak menangani dan perawatan toren
+                air, AC, intalasi air/listrik, saluran pipa mampet di berbagai
+                perumahan dan perkantoran seJabodetabek. Kami memberikan
+                jaminan, gagal anda tidak perlu membayar jasa kami.
               </h1>
             </div>
           </div>
@@ -385,7 +389,7 @@
               <div id="ServiceTab-1" class="tab-pane fade show p-0 active">
                 <div class="service-carousel owl-carousel">
                   <div class="service-item">
-                    <img src="img/5.jpeg" class="img-fluid w-100" alt="" />
+                    <img src="img/5.jpg" class="img-fluid w-100" alt="" />
                     <!-- <div class="border border-top-0 p-4">
                       <h4 class="mb-3">Brite Spark Services</h4>
                       <p class="mb-4">
@@ -399,7 +403,35 @@
                     </div> -->
                   </div>
                   <div class="service-item">
-                    <img src="img/6.jpeg" class="img-fluid w-100" alt="" />
+                    <img src="img/6.jpg" class="img-fluid w-100" alt="" />
+                    <!-- <div class="border border-top-0 p-4">
+                      <h4 class="mb-3">Energy Ease Packages</h4>
+                      <p class="mb-4">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing
+                        elit. Exercitationem, beatae ex. Id esse autem ratione
+                        vero cupiditate tempora recusandae est!
+                      </p>
+                      <a class="btn btn-primary py-2 px-4" href="#"
+                        >Read More</a
+                      >
+                    </div> -->
+                  </div>
+                  <div class="service-item">
+                    <img src="img/5 (2).jpg" class="img-fluid w-100" alt="" />
+                    <!-- <div class="border border-top-0 p-4">
+                      <h4 class="mb-3">Energy Ease Packages</h4>
+                      <p class="mb-4">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing
+                        elit. Exercitationem, beatae ex. Id esse autem ratione
+                        vero cupiditate tempora recusandae est!
+                      </p>
+                      <a class="btn btn-primary py-2 px-4" href="#"
+                        >Read More</a
+                      >
+                    </div> -->
+                  </div>
+                  <div class="service-item">
+                    <img src="img/6 (2).jpg" class="img-fluid w-100" alt="" />
                     <!-- <div class="border border-top-0 p-4">
                       <h4 class="mb-3">Energy Ease Packages</h4>
                       <p class="mb-4">
@@ -497,11 +529,7 @@
             <div class="tab-content">
               <div id="ProjectsTab-1" class="tab-pane fade show p-0 active">
                 <div class="projects-item">
-                  <img
-                    src="img/industrial-1.jpg"
-                    class="img-fluid w-100"
-                    alt=""
-                  />
+                  <img src="img/5.jpg" class="img-fluid w-100" alt="" />
                 </div>
               </div>
               <div id="ProjectsTab-2" class="tab-pane fade show p-0">
